Tweaked bottom bar

--- a/public/css/links.css
+++ b/public/css/links.css
@@ -2,9 +2,11 @@ a, a:active, a:focus, .body-link {
   text-decoration: none;
   color: var(--links);
 }
-a:hover, .body-link:hover {
-  color: var(--links-hover);
-  text-decoration: underline;
+@media (min-width: 700px) {
+	a:hover, .body-link:hover {
+		color: var(--links-hover);
+		text-decoration: underline;
+	}
 }
 p a, .body-link {
   text-decoration: underline;
