--- a/public/css/colors.css
+++ b/public/css/colors.css
@@ -70,7 +70,7 @@
   color: var(--black);
 }
 
-@supports (-webkit-touch-callout: none) {
+@media (max-width: 700px) {
 	/* Darken background on IOS so that the scroll bar is visible */
 	:root {
 		--sidebar-background: var(--gray5)
