--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -19,6 +19,7 @@ input, select {
   outline: none;
   margin-right: .2rem;
   background: var(--white);
+	background: var(--input-background-color);
   height: var(--button-height);
 }
 input[type=checkbox] {
